--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css?family=JetBrains+Mono");
+@import url("https://fonts.googleapis.com/css?family=Inknut+Antiqua");
+
 * {
 	box-sizing: border-box;
 	/* border: 1px solid black; */
